--- a/index1.html
+++ b/index1.html
@@ -8,13 +8,22 @@
 
  </head>
 <body>
-    <table>
+    <table border="">
 
     <tr>
         <td>Nombre</td>
         <td>Apellido</td>
     </tr>
+    <tr>
+        <td>Adrriel</td>
+        <td>Fariña</td>
+    </tr>
     </table>
+
+    <form>
+
+    <input type="text">
+    </form>
 
 
 
